--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ a {
 .button {
   padding: 17px 28px;
   font-size: 1.2rem;
-  color: #fff;
+  color: #6370d4;
   font-weight: 600;
   text-transform: uppercase;
   background-color: var(--primary-color);
