--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,71 +1,69 @@
-.about {
-    background-color: #f8f8f8;
-    margin: auto;
-    padding: 8rem 1rem 0 1rem;
-    width: 100%;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: system-ui;
+    text-transform: capitalize;
+    text-align: center;
 }
 
-.about .container {
-    width: 1240px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.cards {
+    display: inline-block;
+    padding: 20px 30px;
+    border-radius: 20px;
+    border: 1px rgba(211, 211, 211, 0.486) solid;
+    margin: 10px;
+    transition: 0.6s;
 }
 
-.about h2 {
-    font-size: 3rem;
+.cards:hover {
+    transition: 0.6s;
+    box-shadow: 5px 5px 20px lightgray;
 }
 
-.about .col-2 {
+.cards img {
+    transition: 0.2s;
+    width: 120px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    padding: 2px;
+}
+
+.cards:hover img {
+    transition: 0.2s;
+    outline: 4px solid grey;
+}
+
+.cards p {
+    color: grey;
+}
+
+.social-media a i {
+    color: grey;
+    font-size: large;
+    transition: 0.5s;
+    padding: 10px 0;
+}
+
+.social-media a i:hover {
+    transition: 0.5s;
+    transform: scale(2);
+}
+
+.social-media {
+    margin-top: 20px;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    gap: 12px;
+}
+
+h1 {
+    margin: 20px 0;
+}
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 3rem;
 }
-
-.about .col-2 p:first-of-type {
-    margin: 2rem 0;
-}
-
-.about .col-2 p:nth-child(4) {
-    font-size: 1.8rem;
-    font-style: italic;
-    font-weight: 600;
-}
-
-.about button {
-    margin-top: 1rem;
-}
-
-@media screen and (max-width:940px) {
-    .about .container {
-        grid-template-columns: 1fr;
-    }
-
-    .about .container {
-        width: 100%;
-    }
-
-    .about .container img {
-        padding: 0rem;
-        width: 90vw;
-    }
-
-    .about .container .col-2 {
-        padding: 0;
-    }
-
-    .about button {
-        margin-bottom: 1rem;
-    }
-}
-
-
-
-
-
-
-
-
-
