--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -1,19 +1,15 @@
-.chart {
-    background-color: #f8f8f8;
-    margin: auto;
-    padding: 8rem 1rem 0 1rem;
-    width: 100%;
-}
-
 .chart .container {
     width: 1240px;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    background: #d30202;
 }
 
 .chart h2 {
     font-size: 3rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .chart .col-2 {
