--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    background-color: #000;
+    background-color: #1e66d3;
     color: #eee;
     padding: 3rem 1rem;
 }
