--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,23 +1,18 @@
-.header {
-    position: fixed;
-    height: 90px;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    transition: .3s ease-in;
-    overflow: hidden;
-    background-color: white;
+*,*::after, *::before{
+    margin: 0;
+    box-sizing: border-box;
 }
+
+
 
 .header .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     max-width: 1240px;
     margin: auto;
-    height: 100%;
-    padding: 0 1rem;
+    height: 8vh;
+    padding: 5vh;
 }
 
 .header .nav-menu a {
@@ -67,7 +62,7 @@
         left: -100%;
         top: 90px;
         flex-direction: column;
-        background-color: rgba(83, 83, 83, 0.688);
+        background-color: white;
         width: 100%;
         height: 90vh;
         z-index: 999;
